--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,5 +1,9 @@
 body {
-  
+  position: relative;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 a {
@@ -7,34 +11,9 @@ a {
   width: fit-content;
   text-decoration: none;
   color: inherit;
+  border: 1px solid transparent;
 
-  &:hover::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: #fff;
-  }
-}
-
-:focus::after {
-  content: '';
-  display: block;
-  height: 1px;
-  width: 100%;
-  animation: appear 0.3s;
-  background-color: #fff;
-  margin: 0.3rem auto;
-}
-
-@keyframes appear {
-  0% {
-    opacity: 0;
-    width: 0;
-  }
-
-  100% {
-    opacity: 1;
-    width: 100%;
+  &:hover {
+    border-bottom: 1px solid white;
   }
 }
