--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -94,8 +94,8 @@
 }
 
 .scroll-btn {
-  position: fixed;
-  bottom: 0.5rem;
+  position: absolute;
+  bottom: 0.25rem;
   left: 50%;
   width: 40px;
   height: 40px;
