--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@
   left: 0;
   right: 0;
   padding: 2.75rem 2.5vw;
+  z-index: 10;
 
   &__logo {
     grid-area: logo;
@@ -47,6 +48,7 @@ section {
   background-size: cover;
   min-height: 100vh;
   padding: 150px 5rem 3rem;
+  position: relative;
 
   h2 {
     margin-bottom: 3rem;
@@ -69,10 +71,9 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-  padding-bottom: 1.25rem;
   text-align: center;
 
-  & > * {
+  & > *:not(:last-child) {
     margin-bottom: 2.5rem;
   }
 
@@ -133,12 +134,13 @@ section {
       transform: translate(1rem, -2rem);
       z-index: 1;
     }
+  }
 
-    .slider__img {
-      position: relative;
-      z-index: 2;
-      display: block;
-    }
+  &__img {
+    position: relative;
+    z-index: 2;
+    display: block;
+    width: 100%;
   }
 
   &__buttons {
@@ -152,4 +154,4 @@ section {
 
 }
 
-@import 'mobile';
+@import 'adaptive';
