--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -71,7 +71,7 @@
     margin: auto;
 
     &__text {
-      flex-basis: auto;
+      /* flex-basis: auto; */
       margin-bottom: 2rem;
       max-width: 800px;
     }
@@ -86,6 +86,18 @@
   .slider {
     &__viewport::before {
       display: none;
+    }
+  }
+
+  .advantages-layout {
+    display: block;
+
+    & > img {
+      display: none;
+    }
+
+    .advantage {
+      position: static;
     }
   }
 }
