--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,7 @@
   right: 0;
   padding: 2.75rem 2.5vw;
   z-index: 10;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, .7), rgba(0, 0, 0, 0));
 
   &__logo {
     grid-area: logo;
@@ -44,18 +45,26 @@
 //sections
 
 section {
-  background: url(../img/background2.png);
+  background: url(../img/background2.jpg);
   background-size: cover;
   min-height: 100vh;
   padding: 150px 5rem 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
   position: relative;
 
   h2 {
     margin-bottom: 3rem;
   }
+
+  .section-container {
+    position: relative;
+    max-width: 1100px;
+  }
 }
 
-.main-page {
+.main-page{
   background: 
   radial-gradient(
     45.97% 54.43% at 50% 45.57%,
@@ -65,16 +74,19 @@ section {
     transparentize(rgba(5, 5, 6, 0.792703), 0.4) 80.08%, 
     transparentize( #000000, 0.4) 87.89%
     ),
-    url('../img/background1.png');
+    url('../img/background1.jpg');
   background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  text-align: center;
 
-  & > *:not(:last-child) {
-    margin-bottom: 2.5rem;
+  &__container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    & > *:not(:last-child) {
+      margin-bottom: 2.5rem;
+    }
   }
 
   &__img {
@@ -83,12 +95,16 @@ section {
   }
 }
 
-.about-page {
-  display: flex;
-  justify-content: space-between;
+.about-page{
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+  }
 
   &__text {
     flex-basis: 500px;
+    margin-bottom: 200px;
 
     p {
       margin-left: 2rem;
@@ -150,6 +166,94 @@ section {
 
   &__prev {
     transform: rotate(180deg);
+  }
+
+}
+
+.advantage {
+  display: flex;
+  gap: 2rem;
+  margin-bottom: 1rem;
+
+  &__slider {
+    h3 {
+      left: -3rem;
+    }
+
+    .slider__img {
+      width: 195px;
+    }
+  }
+
+  &__text {
+    max-width: 300px;
+    word-wrap: break-word;
+
+    h4 {
+      margin-bottom: 0.6rem;
+      white-space: pre-line;
+    }
+  }
+}
+
+.advantages-layout {
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(10, 1fr);
+  gap: 0.3rem;
+  list-style-type: 0;
+
+  .advantage {
+    grid-column: span 4;
+    position: relative;
+    align-self: center;
+    justify-self: center;
+
+    &:first-of-type {
+      grid-row: 1;
+      grid-column: 1/ span 4;
+    }
+
+    &:nth-of-type(2) {
+      top: 1rem;
+      grid-row: 1;
+    }
+
+    &:nth-of-type(3) {
+      grid-row: 3;
+      grid-column: 1/ span 4;
+      left: 2rem;
+      top: 0.6rem;
+    }
+
+    &:last-of-type {
+      grid-row: 3;
+      left: 3rem;
+      top: 1.5rem;
+    }
+  }
+  
+  & > img {
+    grid-column: 4 / span 3;
+    width: 100%;
+    opacity: 1;
+    align-self: center;
+    opacity: 0.4;
+
+    &:first-of-type {
+      grid-row: 1;
+    }
+
+    &:nth-of-type(2){
+      grid-column: 2 / span 5;
+      grid-row: 2;
+    }
+
+    &:nth-of-type(3){
+      grid-row: 3;
+      position: relative;
+      left: 10%;
+    }
   }
 
 }
